GNOME Bugzilla – Bug 754417
rtptheoradepay: Reading headers from caps is broken
Last modified: 2015-09-02 18:14:14 UTC
This a nasty regression as it makes the theora RTP depayloader largely non-functional. Simple test: gst-launch-1.0 videotestsrc ! theoraenc ! rtptheorapay ! rtptheoradepay ! theoradec ! xvimagesink This was broken from b1089fb520 from bug #751774
Should be broken for vorbis too then. Will take a look
commit f0ca2f2ecb32d01e33cc6e87085b0163fa5bbd47 Author: Sebastian Dröge <sebastian@centricular.com> Date: Wed Sep 2 21:12:41 2015 +0300 rtpvorbis/theoradepay: Fix handling of fragmented packets This was broken in b1089fb520 by not considering the full packet length of a fragmented packet but only the length of the first one. https://bugzilla.gnome.org/show_bug.cgi?id=754417